kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volitveni-vodic-4xproti
  labels:
    app: volitveni-vodic-4xproti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volitveni-vodic-4xproti
  template:
    metadata:
      labels:
        app: volitveni-vodic-4xproti
    spec:
      containers:
        - name: volitveni-vodic-4xproti
          image: volitveni-vodic-4xproti
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 25Mi
              cpu: 25m
            limits:
              memory: 25Mi
              cpu: 25m
