kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volitveni-vodic-4xproti
spec:
  selector:
    app: volitveni-vodic-4xproti
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
