kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: 4xproti-add-trailing-slash
spec:
  redirectRegex:
    regex: (/referendum/4xproti)(\?.*)?$
    replacement: ${1}/${2}
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: 4xproti-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /referendum/4xproti
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volitveni-vodic-4xproti
  annotations:
    # Do not put cert manager here, root redirect ingress (in `ops` repo) will handle it.
    # If we put it here, they will both try to issue the certificate and letsencrypt will rate limit us.
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      vodici-redirect-domain@kubernetescrd,
      vodici-4xproti-add-trailing-slash@kubernetescrd,
      vodici-4xproti-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: vodici.danesjenovdan.si
      http:
        paths:
          - path: /referendum/4xproti
            pathType: Prefix
            backend:
              service:
                name: volitveni-vodic-4xproti
                port:
                  number: 80
